--- a/amh-resume.html
+++ b/amh-resume.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style>
-	</style>
+	<link type="text/css" rel="stylesheet" href="resume-style.css">
 </head>
 <body>
 	<h1 class="main-title">
@@ -11,15 +10,16 @@
 		<ul class="info-list">
 			<li>aheath42@gmail.com</li>
 			<li>Yorba Linda, CA</li>
+			<li>714-555-5555</li>
 		</ul>
-	<p class="text-body">
+	<p class="general-body">
 		I am 24 years old and have lived in Yorba Linda for most of my life.  Since a young age I have 
 		been around computers and electronics and have been fascinated by them for well over half of my 
 		life.  While learning about stuff from my father I was put into a variety of summer camps focused 
 		on electronics and technology.  These included a beginner's course on robots, web page design, 
 		game design, and video editing.
 	</p>
-	<p class="text-body">
+	<p class="school-body">
 		I attended El Dorado High School in Placentia, CA and graduated in 2008.  I excelled in the areas 
 		of mathematics, physical sciences, and computer science, and I still have a great interest in 
 		these subjects.  During my Junior year I was able to take a course on Visual Basic, which was 
@@ -28,7 +28,7 @@
 		glimpse of what kinds of programs could be written, including programming robots made from LEGO 
 		Mindstorms.
 	</p>
-	<p class="text-body">
+	<p class="college-body">
 		After high school I attended Fullerton Community College for four years.  Aside from general 
 		education courses, I took courses on C and C++, continuing to grow my interest in the field.  I 
 		also took a basic course on computer and network security, expanding my views past just 
@@ -36,7 +36,7 @@
 		services.  On my own, I have used resources like Code School to learn more about HTML, CSS, 
 		and JavaScript.
 	</p>
-	<p class="text-body">
+	<p class="interest-body">
 		I also have many other interests besides computers.  Video games have always been an interest of 
 		mine, and I enjoy playing a wide variety of them.  I also enjoy various board games and pen and 
 		paper games.  Music plays a large part in my life and the range of styles I like is vast.  I have 
@@ -44,18 +44,18 @@
 		online.  Another hobby I partake in is table-top miniatures games, in which you assemble and paint 
 		miniatures of various sizes to play a game with.
 	</p>
-	<h2 class="section-title">
+	<h2 class="employ-title">
 		Employment History
 	</h2>
 	<p class="text-body">
-		<h3 class="employ-title">
+		<h3 class="job-title">
 			Stater Bros. Supermarket
 		</h3>
-		<ul class="employ-list">
+		<ul class="job-list">
+			<li><b>Duration:</b> Spring 2006 to Fall 2006</li>
 			<li><b>Location:</b> Placentia, CA
 			<li><b>Position:</b> Courtesy Clerk</li>
-			<li><b>Duration:</b> Spring 2006 to Fall 2006</li>
-			<li><b>Skills Used/Acquired</b>
+			<li><b>Skills Used/Acquired:</b>
 				<ul class="skills-list">
 					<li>Customer Service</li>
 					<li>Task Repetition</li>
@@ -64,14 +64,14 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 class="employ-title">
+		<h3 class="job-title">
 			Anaheim Extrusions
 		</h3>
-		<ul class="employ-list">
+		<ul class="job-list">
+			<li><b>Duration:</b> Summer 2008 to Present</li>
 			<li><b>Location:</b> Anaheim, CA
 			<li><b>Position:</b> AutoCAD Draftsman</li>
-			<li><b>Duration:</b> Summer 2008 to Present</li>
-			<li><b>Skills Used/Acquired</b>
+			<li><b>Skills Used/Acquired:</b>
 				<ul class="skills-list">
 					<li>Spatial Problem Solving</li>
 					<li>Following Directions</li>
@@ -82,10 +82,10 @@
 			</li>
 		</ul>
 	</p>
-	<h2 class="section-title">
+	<h2 class="skills-title">
 		Personal Skills
 	</h2>
-	<p class="text-body">
+	<p class="skills-body">
 		When it comes to things involving computers, I absorb new information very quickly.  Whether it's related 
 		to programming or not, I can understand and utilize what I learn after only just a bit of practice.  This 
 		also extends to the fields of mathematics and systems, mechanical or informational.  I work very well in 
