--- a/amh-resume.html
+++ b/amh-resume.html
@@ -7,94 +7,53 @@
 	<h1 class="main-title">
 		Andrew Malcolm Heath
 	</h1>
-		<ul class="info-list">
-			<li>aheath42@gmail.com</li>
-			<li>Yorba Linda, CA</li>
-			<li>714-555-5555</li>
-		</ul>
-	<p class="general-body">
-		I am 24 years old and have lived in Yorba Linda for most of my life.  Since a young age I have 
-		been around computers and electronics and have been fascinated by them for well over half of my 
-		life.  While learning about stuff from my father I was put into a variety of summer camps focused 
-		on electronics and technology.  These included a beginner's course on robots, web page design, 
-		game design, and video editing.
-	</p>
-	<p class="school-body">
-		I attended El Dorado High School in Placentia, CA and graduated in 2008.  I excelled in the areas 
-		of mathematics, physical sciences, and computer science, and I still have a great interest in 
-		these subjects.  During my Junior year I was able to take a course on Visual Basic, which was 
-		used as an introductory course for the AP Java course I took the following year.  The AP Java 
-		course was truly the course to decide in my want to become a computer programmer, showing me a 
-		glimpse of what kinds of programs could be written, including programming robots made from LEGO 
-		Mindstorms.
-	</p>
-	<p class="college-body">
-		After high school I attended Fullerton Community College for four years.  Aside from general 
-		education courses, I took courses on C and C++, continuing to grow my interest in the field.  I 
-		also took a basic course on computer and network security, expanding my views past just 
-		programming and to keep myself aware of other issues in the field of computer information 
-		services.  On my own, I have used resources like Code School to learn more about HTML, CSS, 
-		and JavaScript.
-	</p>
-	<p class="interest-body">
-		I also have many other interests besides computers.  Video games have always been an interest of 
-		mine, and I enjoy playing a wide variety of them.  I also enjoy various board games and pen and 
-		paper games.  Music plays a large part in my life and the range of styles I like is vast.  I have 
-		picked up the guitar, taking some private lessons but mostly self taught from looking up tablature 
-		online.  Another hobby I partake in is table-top miniatures games, in which you assemble and paint 
-		miniatures of various sizes to play a game with.
-	</p>
+	<ul class="info-list">
+		<li>Yorba Linda, CA</li>
+		<li>714-555-5555</li>
+		<li>aheath42@gmail.com</li>
+		<li>GitHub.com/Andrew-Heath</li>
+	</ul>
 	<h2 class="employ-title">
 		Employment History
 	</h2>
-	<p class="text-body">
-		<h3 class="job-title">
-			Stater Bros. Supermarket
-		</h3>
-		<ul class="job-list">
-			<li><b>Duration:</b> Spring 2006 to Fall 2006</li>
-			<li><b>Location:</b> Placentia, CA
-			<li><b>Position:</b> Courtesy Clerk</li>
-			<li><b>Skills Used/Acquired:</b>
-				<ul class="skills-list">
-					<li>Customer Service</li>
-					<li>Task Repetition</li>
-					<li>Following Directions</li>
-					<li>Cooperation with Co-workers</li>
-				</ul>
-			</li>
-		</ul>
-		<h3 class="job-title">
-			Anaheim Extrusions
-		</h3>
-		<ul class="job-list">
-			<li><b>Duration:</b> Summer 2008 to Present</li>
-			<li><b>Location:</b> Anaheim, CA
-			<li><b>Position:</b> AutoCAD Draftsman</li>
-			<li><b>Skills Used/Acquired:</b>
-				<ul class="skills-list">
-					<li>Spatial Problem Solving</li>
-					<li>Following Directions</li>
-					<li>Daily Reports</li>
-					<li>Self Checking for Accuracy</li>
-					<li>Listing Information for Readability</li>
-				</ul>
-			</li>
-		</ul>
-	</p>
-	<h2 class="skills-title">
-		Personal Skills
+	<h3 class="job-title">
+		Stater Bros. Supermarket
+	</h3>
+	<ul class="job-list">
+		<li><b>Duration:</b> Spring 2006 to Fall 2006</li>
+		<li><b>Location:</b> Placentia, CA</li>
+		<li><b>Position:</b> Courtesy Clerk</li>
+		<li><i>A service clerk: bagged groceries, cleaned spills, collected shopping carts, assisted customers.</i></li>
+	</ul>
+	<h3 class="job-title">
+		Anaheim Extrusions
+	</h3>
+	<ul class="job-list">
+		<li><b>Duration:</b> Summer 2008 to Present</li>
+		<li><b>Location:</b> Anaheim, CA</li>
+		<li><b>Position:</b> AutoCAD Draftsman</li>
+		<li><i>Design shapes using AutoCAD for extrusion from a customer's specifications.</i></li>
+	</ul>
+	<h2 class="tech-title">
+		Technical Skills
 	</h2>
-	<p class="skills-body">
-		When it comes to things involving computers, I absorb new information very quickly.  Whether it's related 
-		to programming or not, I can understand and utilize what I learn after only just a bit of practice.  This 
-		also extends to the fields of mathematics and systems, mechanical or informational.  I work very well in 
-		a group, willing to split a workload as best fits the group's strengths and give and take help as 
-		required.  I can also work well on my own, especially on things that will require a degree of detail.  I 
-		am good at solving numerical and logical problems, and often find joy in successfully solving these 
-		issues.  If I don't understand something, I will research it on my own if I have no one in my immediate 
-		vicinity I can ask for clarification.  I can type decently fast and keep my handwriting as legible as 
-		possible.
-	</p>
+	<h3 class="skill-title">
+		Strong Skills:
+	</h3>
+	<div class="skill-body">
+		JavaScript, HTML/CSS
+	</div>
+	<h3 class="skill-title">
+		Good Skills:
+	</h3>
+	<div class="skill-body">
+		Java, C/C++, jQuery
+	</div>
+	<h2 class="personal-title">
+		Personal
+	</h2>
+	<div class="personal-body">
+		Invested in improving skills in programming for the dream of working on a game project.  Enjoys video games, music, playing the guitar, tabletop games, and miniatures building, painting, and gaming.
+	</div>
 </body>
 </html>
