wrap code into blocks

--- a/amh-resume.html
+++ b/amh-resume.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="resume-style.css">
+    <link rel="stylesheet" href="resume-style.css">
   </head>
   <body>
-    <div class="block b1">
-      <h1 class="main-title">Andrew Malcolm Heath</h1>
-      <h3>Contact Information</h3>
-      <ul class="info-list">
-        <li>Yorba Linda, CA</li>
-        <li>714-555-5555</li>
-        <li>aheath42@gmail.com</li>
-        <li>GitHub.com/Andrew-Heath</li>
-      </ul>
-    </div>
-    <div class="block b2">
-      <h2 class="employ-title">Employment History</h2>
-      <h3 class="job-title">Stater Bros. Supermarket</h3>
-      <ul class="job-list">
-        <li><b>Duration:</b> Spring 2006 to Fall 2006</li>
-        <li><b>Location:</b> Placentia, CA</li>
-        <li><b>Position:</b> Courtesy Clerk</li>
-        <li><i>A service clerk: bagged groceries, cleaned spills, collected shopping carts, assisted customers.</i></li>
-      </ul>
-      <h3 class="job-title">Anaheim Extrusions</h3>
-      <ul class="job-list">
-        <li><b>Duration:</b> Summer 2008 to Present</li>
-        <li><b>Location:</b> Anaheim, CA</li>
-        <li><b>Position:</b> AutoCAD Draftsman</li>
-        <li><i>Design shapes using AutoCAD for extrusion from a customer's specifications.</i></li>
-      </ul>
-    </div>
-    <div class="block b3">
-      <h2 class="tech-title">Technical Skills</h2>
-      <h3 class="skill-title">Strong Skills:</h3>
-      <ul class="skill-list"><li>JavaScript, HTML/CSS</li></ul>
-      <h3 class="skill-title">Good Skills:</h3>
-      <ul class="skill-list"><li>Java, C/C++, jQuery</li></ul>
-    </div>
-    <div class="block b4">
-      <h2 class="personal-title">Personal</h2>
-      <p class="personal-body">
-        Invested in improving skills in programming for the dream of working on a game project.  Enjoys video games, music, playing the guitar, tabletop games, and miniatures building, painting, and gaming.
-      </p>
-    </div>
+    <main>
+      <section class="block b1">
+        <h1 class="main-title">Andrew Malcolm Heath</h1>
+        <h3>Contact Information</h3>
+        <ul class="info-list">
+          <li>Yorba Linda, CA</li>
+          <li>714-555-5555</li>
+          <li>aheath42@gmail.com</li>
+          <li>GitHub.com/Andrew-Heath</li>
+        </ul>
+      </section>
+      <section class="block b2">
+        <h2 class="employ-title">Employment History</h2>
+        <h3 class="job-title">Stater Bros. Supermarket</h3>
+        <ul class="job-list">
+          <li><b>Duration:</b> Spring 2006 to Fall 2006</li>
+          <li><b>Location:</b> Placentia, CA</li>
+          <li><b>Position:</b> Courtesy Clerk</li>
+          <li><i>A service clerk: bagged groceries, cleaned spills, collected shopping carts, assisted customers.</i></li>
+        </ul>
+        <h3 class="job-title">Anaheim Extrusions</h3>
+        <ul class="job-list">
+          <li><b>Duration:</b> Summer 2008 to Present</li>
+          <li><b>Location:</b> Anaheim, CA</li>
+          <li><b>Position:</b> AutoCAD Draftsman</li>
+          <li><i>Design shapes using AutoCAD for extrusion from a customer's specifications.</i></li>
+        </ul>
+      </section>
+      <section class="block b3">
+        <h2 class="tech-title">Technical Skills</h2>
+        <h3 class="skill-title">Strong Skills:</h3>
+        <ul class="skill-list"><li>JavaScript, HTML/CSS</li></ul>
+        <h3 class="skill-title">Good Skills:</h3>
+        <ul class="skill-list"><li>Java, C/C++, jQuery</li></ul>
+      </section>
+      <section class="block b4">
+        <h2 class="personal-title">Personal</h2>
+        <p class="personal-body">
+          Invested in improving skills in programming for the dream of working on a game project.  Enjoys video games, music, playing the guitar, tabletop games, and miniatures building, painting, and gaming.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
