--- a/amh-resume.html
+++ b/amh-resume.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="resume-style.css">
   </head>
   <body>
-    <main>
+    <main id="page 1">
       <section class="block b1">
         <h1 class="main-title">Andrew Malcolm Heath</h1>
         <h3>Contact Information</h3>
@@ -46,5 +46,7 @@
         </p>
       </section>
     </main>
+    <script src="jquery-2.1.1.min.js"></script>
+    <script src="resume-script.js"></script>
   </body>
 </html>
