add simple html form swapping

--- a/amh-resume.html
+++ b/amh-resume.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="resume-style.css">
   </head>
   <body>
+    <button class="edit-toggle">Edit</button>
+    <form action="#">
+      <textarea id="page 1"></textarea>
+    </form>
     <main id="page 1">
       <section class="block b1">
         <h1 class="main-title">Andrew Malcolm Heath</h1>
